[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/gui/healthbar_bottom.png" type="Texture" id=1]
[ext_resource path="res://textures/gui/healthbar_top.png" type="Texture" id=2]
[ext_resource path="res://textures/gui/healthbar_middle.png" type="Texture" id=3]
[ext_resource path="res://m3x6.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/GUI/PlayerInfo.gd" type="Script" id=5]
[ext_resource path="res://textures/gui/PlayerWindow.png" type="Texture" id=6]
[ext_resource path="res://textures/gui/xpbar_middle.png" type="Texture" id=7]
[ext_resource path="res://textures/gui/xpbar_top.png" type="Texture" id=8]
[ext_resource path="res://textures/gui/xpbar_bottom.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[node name="PlayerInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerWindow" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 221.0
margin_right = 52.0
margin_bottom = 253.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerWindow/HBoxContainer"]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 32.0
alignment = 1

[node name="PlayerClass" type="TextureRect" parent="PlayerWindow/HBoxContainer/VBoxContainer"]
margin_top = 16.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureRect" parent="."]
margin_left = 53.8886
margin_top = 240.0
margin_right = 159.889
margin_bottom = 252.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Health"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.111359
margin_top = -14.0
margin_right = -0.111359
margin_bottom = -1.0
custom_fonts/font = SubResource( 1 )
custom_constants/line_spacing = 0
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Health"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -4.0
margin_right = 50.0
margin_bottom = 4.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="Health/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -4.0
margin_right = 50.0
margin_bottom = 4.0
value = 100.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XP" type="TextureRect" parent="."]
margin_left = 55.0
margin_top = 255.0
margin_right = 159.0
margin_bottom = 261.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="XP"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -1.0
margin_right = 50.0
margin_bottom = 1.0
texture = ExtResource( 9 )

[node name="TextureProgress" type="TextureProgress" parent="XP/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -1.0
margin_right = 50.0
margin_bottom = 1.0
texture_progress = ExtResource( 7 )

[node name="Label" type="Label" parent="XP"]
margin_left = -32.0
margin_top = -5.0
margin_right = -4.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 2 )
custom_constants/line_spacing = -5
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="XP"]
margin_left = 1.0
margin_top = 2.0
margin_right = 103.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
custom_constants/line_spacing = -5
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
